# ardrone

./: README.md
ardrone_autonomy/: CMakeLists.txt
ardrone_autonomy/launch/: my_driver.launch
ardrone_autonomy/src/: ardrone_driver.cpp
ardrone_joystick/: CMakeLists.txt  package.xml
ardrone_joystick/launch/: teleop.launch
ardrone_joystick/src/: main.cpp
tum_ardrone/logs/148669953386-39s/: logFilter.txt  logIMU.txt  logPTAM.txt  logPTAMRaw.txt
tum_ardrone/logs/148669957686-1s/: logFilter.txt  logIMU.txt  logPTAM.txt  logPTAMRaw.txt
tum_simulator/cvg_sim_gazebo/launch/: README.md  ardrone_testworld.launch  display.launch  empty_world.launch  gazebo.launch  rviz.launch  spawn_quadrotor.launch
tum_simulator/cvg_sim_gazebo/meshes/psd_sensor/: psd_sensor.stl
tum_simulator/cvg_sim_gazebo/rviz/: urdf.rviz
tum_simulator/cvg_sim_gazebo/urdf/: quadrotor.urdf  quadrotor_base.urdf  quadrotor_base.urdf.xacro  quadrotor_hokuyo_utm30lx.gv  quadrotor_psd.urdf  quadrotor_psd.urdf.xacro  quadrotor_sensors.urdf  test.urdf
tum_simulator/cvg_sim_gazebo/urdf/sensors/: psd_sensor.urdf.xacro  sonar_sensor.urdf.xacro
tum_simulator/cvg_sim_gazebo/worlds/: wg_edit.world
tum_simulator/cvg_sim_gazebo_plugins/urdf/: quadrotor_plugins.urdf.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
tum_simulator/message_to_tf/src/: message_to_tf.cpp
